--- a/single/index.html
+++ b/single/index.html
@@ -8,6 +8,8 @@
 	<script src="app.js"></script>
 </head>
 <body>
+	<a href="#second.html">Second</a>
+	<a href="#home.html">Home</a>
 	<div>
 		<div ng-view></div>
 	</div>
