--- a/single/index.html
+++ b/single/index.html
@@ -7,11 +7,38 @@
 	<script src="https://code.angularjs.org/1.3.0/angular-route.min.js"></script>
 	<script src="app.js"></script>
 </head>
+	<style type="text/css">
+		.fade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    opacity: 1;
+}
+.fade.ng-enter,
+.fade.ng-leave {
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+.fade.ng-enter {
+    opacity: 0;
+}
+.fade.ng-enter-active {
+    opacity: 1;
+}
+.fade.ng-leave {
+    opacity: 1;
+}
+.fade.ng-leave-active {
+    opacity: 0;
+}
+	</style>
 <body>
 	<a href="#second.html">Second</a>
 	<a href="#home.html">Home</a>
 	<div>
-		<div ng-view></div>
+		<div ng-view class="fade"></div>
 	</div>
 </body>
 </html>
