--- a/single/index.html
+++ b/single/index.html
@@ -11,17 +11,18 @@
 </head>
 <body>
 	<div class="home span12">	
-		<div class="exact2 menu center">
-			<h1 class="regular logo">Hello</h1>
-			<div class="menu-content">	
-				<div class="menu-item"><a href="#/"><h3 class="regular primary-pink menu-link bottom">Home</h3></a></div>
-				<div class="menu-item"><a href="#second"><h3 class="regular primary-pink bottom menu-link">About</h3></a></div>
-				<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Skills</h3></a></div>
-				<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Projects</h3></a></div>
-				<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Contact</h3></a></div>
+		<div class="span12 menu right">
+			<div class="container">
+				<div class="menu-content">	
+					<div class="menu-item"><a href="#/"><h3 class="regular primary-pink menu-link bottom">Home</h3></a></div>
+					<div class="menu-item"><a href="#second"><h3 class="regular primary-pink bottom menu-link">About</h3></a></div>
+					<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Skills</h3></a></div>
+					<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Projects</h3></a></div>
+					<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Contact</h3></a></div>
+				</div>
 			</div>
 		</div>
-		<div class="exact10 rel">
+		<div class="span12 rel">
 			<div ng-view class="fade"></div>
 		</div>
 	</div>
