--- a/single/home.html
+++ b/single/home.html
@@ -1,3 +1,9 @@
-<div class="span12 home-img">
-	
+<div class="span12 home-img home-page">
+	<div class="container">	
+		<div class="table">
+			<div class="table-cell">
+				<h1>Hello Folks</h1>		
+			</div>
+		</div>
+	</div>
 </div>
