--- a/single/index.html
+++ b/single/index.html
@@ -14,8 +14,7 @@
 		<div class="span12 menu right">
 			<div class="container">
 				<div class="menu-content">	
-					<div class="menu-item"><a href="#/"><h3 class="regular primary-pink menu-link bottom">Home</h3></a></div>
-					<div class="menu-item"><a href="#second"><h3 class="regular primary-pink bottom menu-link">About</h3></a></div>
+					<div class="menu-item"><a href="#/"><h3 class="regular primary-pink bottom menu-link">About</h3></a></div>
 					<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Skills</h3></a></div>
 					<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Projects</h3></a></div>
 					<div class="menu-item"><a href=""><h3 class="regular primary-pink bottom menu-link">Contact</h3></a></div>
